order_process/order_intake/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: order-intake
  labels:
    pass.subject: order-intake
spec:
  restartPolicy: Always

  containers:
    - name: subject-behavior
      image: order_intake:latest
      imagePullPolicy: Never
      command: ["python", "/app/behavior.py"]

    - name: input-pool
      image: input_pool:latest
      imagePullPolicy: Never
      command: ["input-pool"]

      ports:
        - containerPort: 8081
        - containerPort: 8080
