order_process/order_intake/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-intake
spec:
  selector:
    pass.subject: order-intake
  ports:
    - name: input-pool
      port: 8080
      targetPort: 8080
