order_process/order_intake/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-intake-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /messages
spec:
  rules:
    - http:
        paths:
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-intake
                port:
                  number: 8080
